--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -3,27 +3,27 @@ kind: Deployment
 metadata:
   annotations:
   labels:
-    app: spring-petclinic
+    app: spring-log4j
     app.kubernetes.io/component: web
-    app.kubernetes.io/instance: spring-petclinic
-    app.kubernetes.io/name: spring-petclinic
-    app.kubernetes.io/part-of: spring-petclinic
+    app.kubernetes.io/instance: spring-log4j
+    app.kubernetes.io/name: spring-log4j
+    app.kubernetes.io/part-of: spring-log4j
     app.openshift.io/runtime: java
-  name: spring-petclinic
+  name: spring-log4j
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: spring-petclinic
+      app: spring-log4j
   template:
     metadata:
       labels:
-        app: spring-petclinic
+        app: spring-log4j
     spec:
       containers:
-      - name: spring-petclinic
+      - name: spring-log4j
         imagePullPolicy: Always
-        image: quay.io/siamaksade/spring-petclinic:latest
+        image: registry-1.docker.io/egrol/spring-boot-log4j-vulnerable:0.1 
         livenessProbe:
           failureThreshold: 3
           httpGet:
