--- a/app/route.yaml
+++ b/app/route.yaml
@@ -2,12 +2,12 @@ apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
   labels:
-    app: spring-petclinic
-  name: spring-petclinic
+    app: spring-log4j
+  name: spring-log4j
 spec:
-  port:
-    targetPort: 8080-tcp
+  log4j:
+    targetlog4j: 8080-tcp
   to:
     kind: Service
-    name: spring-petclinic
+    name: spring-log4j
     weight: 100
